comments wrap overflow fix

--- a/landing/css/main.css
+++ b/landing/css/main.css
@@ -3014,3 +3014,8 @@ main.home-page {
 .down-arrow {
     cursor: pointer;
 }
+
+.comments__wrap{
+    overflow: auto;
+    max-height: 200px;
+}
